--- a/src/assets/style/helpers.scss
+++ b/src/assets/style/helpers.scss
@@ -13,3 +13,25 @@ button {
   transition: all .4s;
   color: transparent !important;
 }
+
+.cursor {
+  will-change: transform;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  min-width: 100px;
+  height: 30px;
+  padding: 0 5px;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  mix-blend-mode: difference;
+  pointer-events: none;
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 0.3s ease;
+  background-color: $lavender;
+  z-index: 1000;
+  color: $black;
+  font-weight: bold;
+  text-transform: uppercase;
+}
