create modal, animation description

--- a/src/assets/style/colors.scss
+++ b/src/assets/style/colors.scss
@@ -1,6 +1,6 @@
 $black: #232536;
 $white: #FFFFFF;
-$yellow: #FFD050;
+$sun: rgb(253, 99, 38);
 $purple: #592EA9;
 $dark-grey: #4C4C4C;
 $medium-grey: #6D6E76;
