--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -3,9 +3,9 @@
     font-weight: 700;
     font-style: normal;
     src: local("SF Pro Display Bold"),
-        url("./sf-pro-display/SFProDisplay-Bold.woff2")
+        url("../fonts/sf-pro-display/SFProDisplay-Bold.woff2")
         format("woff2"),
-        url("./sf-pro-display/SFProDisplay-Bold.woff") format("woff"),
+        url("../fonts/sf-pro-display/SFProDisplay-Bold.woff") format("woff"),
         format("truetype");
     font-display: swap;
 }
@@ -15,9 +15,9 @@
     font-weight: 600;
     font-style: normal;
     src: local("SF Pro Display Semibold"),
-        url("./sf-pro-display/SFProDisplay-Semibold.woff2")
+        url("../fonts/sf-pro-display/SFProDisplay-Semibold.woff2")
         format("woff2"),
-        url("./sf-pro-display/SFProDisplay-Semibold.woff")
+        url("../fonts/sf-pro-display/SFProDisplay-Semibold.woff")
         format("woff"),
         format("truetype");
     font-display: swap;
@@ -28,7 +28,7 @@
     font-weight: 500;
     font-style: normal;
     src: local("SF Pro Display Medium"),
-        url("./sf-pro-display/SFProDisplay-Medium.woff2")
+        url("../fonts/sf-pro-display/SFProDisplay-Medium.woff2")
         format("woff2"),
         format("woff");
     font-display: swap;
@@ -39,9 +39,9 @@
     font-weight: 400;
     font-style: normal;
     src: local("SF Pro Display Regular"),
-        url("./sf-pro-display/SFProDisplay-Regular.woff2")
+        url("../fonts/sf-pro-display/SFProDisplay-Regular.woff2")
         format("woff2"),
-        url("./sf-pro-display/SFProDisplay-Regular.woff")
+        url("../fonts/sf-pro-display/SFProDisplay-Regular.woff")
         format("woff"),
         format("truetype");
     font-display: swap;
